# attendly

./: .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/face-service/: .env.example  Dockerfile  pyproject.toml
apps/face-service/app/: main.py
apps/face-service/app/api/v1/: router.py
apps/face-service/app/api/v1/routes/: attendance.py  camera.py  enrollment.py  health.py  stream.py
apps/face-service/app/core/: config.py
apps/face-service/app/models/: attendance.py  enrollment.py
apps/face-service/app/services/: face_engine.py  storage.py  stream_manager.py
apps/face-service/tests/: test_health.py
apps/web/: .env.example  next.config.ts  package.json  sentry.client.config.ts
apps/web/src/: instrumentation.ts  middleware.ts
apps/web/src/actions/: attendance.ts  camera.ts  dashboard.ts  department.ts  employee-import.ts  employee.ts  enrollment.ts  leave-type.ts  leave.ts  location.ts  notification.ts  onboarding.ts  report.ts  shift.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/(auth)/: layout.tsx  loading.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(legal)/: layout.tsx
apps/web/src/app/(onboarding)/: layout.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/auth/: auth-card.tsx  (+5 more)
apps/web/src/db/: index.ts
apps/web/src/lib/: auth-client.ts  auth-server.ts  auth.ts  csv-export.ts  email.ts  env.ts  rate-limit.ts
docs/: DECISION_LOG.md  PRD.md  SOP.md  tech_debt.md
(+120 files in other folders)
